--- a/appsettings.json
+++ b/appsettings.json
@@ -1,14 +1,14 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-BookingApplication-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DevConnection": "Server = (local)\\sqlexpress; Database=BookingDB; Trusted_Connection=True; MultipleActiveResultSets=True;"
   },
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
+    }
+  },
   "IdentityServer": {
     "Clients": {
       "BookingApplication": {
@@ -16,5 +16,6 @@
       }
     }
   },
-"AllowedHosts": "*"
+  "AllowedHosts": "*"
+
 }
